rest: cleans job request & allows overwriting uid
* Addresses reanahub/reana-workflow-controller/issues/269
