# docs/openapi.json
@@ -12,9 +12,6 @@
         "docker_img": {
           "type": "string"
         },
-        "experiment": {
-          "type": "string"
-        },
         "job_id": {
           "type": "string"
         },
@@ -33,7 +30,6 @@
       "required": [
         "cmd",
         "docker_img",
-        "experiment",
         "job_id",
         "max_restart_count",
         "restart_count",
@@ -61,18 +57,15 @@
           "default": {},
           "type": "object"
         },
-        "experiment": {
-          "type": "string"
-        },
-        "job_id": {
-          "format": "uuid",
-          "type": "string"
-        },
         "job_name": {
           "type": "string"
         },
         "kerberos": {
           "type": "boolean"
+        },
+        "kubernetes_uid": {
+          "format": "int32",
+          "type": "integer"
         },
         "prettified_cmd": {
           "default": "",
@@ -91,7 +84,6 @@
       },
       "required": [
         "docker_img",
-        "experiment",
         "job_name",
         "workflow_uuid",
         "workflow_workspace"
@@ -177,7 +169,6 @@
                       "atlas-condb.cern.ch"
                     ],
                     "docker_img": "busybox",
-                    "experiment": "atlas",
                     "job_id": "1612a779-f3fa-4344-8819-3d12fa9b9d90",
                     "max_restart_count": 3,
                     "restart_count": 0,
@@ -190,7 +181,6 @@
                       "atlas-condb.cern.ch"
                     ],
                     "docker_img": "busybox",
-                    "experiment": "atlas",
                     "job_id": "2e4bbc1d-db5e-4ee0-9701-6e2b1ba55c20",
                     "max_restart_count": 3,
                     "restart_count": 0,
@@ -284,7 +274,6 @@
                     "atlas-condb.cern.ch"
                   ],
                   "docker_img": "busybox",
-                  "experiment": "atlas",
                   "job_id": "cdcf48b1-c2f3-4693-8230-b066e088c6ac",
                   "max_restart_count": 3,
                   "restart_count": 0,
