# reana_job_controller/schemas.py
@@ -9,8 +9,6 @@
 
 """REANA Job Controller models."""
 
-import uuid
-
 from marshmallow import Schema, fields, pre_load
 
 
@@ -19,7 +17,6 @@ class Job(Schema):
 
     cmd = fields.Str(required=True)
     docker_img = fields.Str(required=True)
-    experiment = fields.Str(required=True)
     job_id = fields.Str(required=True)
     max_restart_count = fields.Int(required=True)
     restart_count = fields.Int(required=True)
@@ -30,22 +27,15 @@ class Job(Schema):
 class JobRequest(Schema):
     """Job request model."""
 
-    job_id = fields.UUID()
     job_name = fields.Str(required=True)
     workflow_workspace = fields.Str(required=True)
     workflow_uuid = fields.Str(required=True)
     cmd = fields.Str(missing='')
     prettified_cmd = fields.Str(missing='')
     docker_img = fields.Str(required=True)
-    experiment = fields.Str(required=True)
     cvmfs_mounts = fields.String(missing='')
     env_vars = fields.Dict(missing={})
     shared_file_system = fields.Bool(missing=True)
     compute_backend = fields.Str(required=False)
     kerberos = fields.Bool(required=False)
-
-    @pre_load
-    def make_id(self, data):
-        """Generate UUID for new Jobs."""
-        data['job_id'] = uuid.uuid4()
-        return data
+    kubernetes_uid = fields.Int(required=False)
